<resources>
    <string name="app_name">AiDongProVer2</string>
    <string name="warmUp_string">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;篮球运动是一项身体对抗量强、运动量大、身体活动幅度大的运动，因此，在这之前我们需要对身体进行充分的热身活动，来为后续的大强度运动做准备，使身体适应高强度运动，减少受伤的风险，一般进行十至三十分钟，使身体适应，慢慢热起来即可。</string>
    <string name="jog_string">慢跑是热身环节中必不可缺少的步骤，因地制宜，最简便的还是绕着篮球场跑几圈，根据自己的身体情况和场地环境调整，感到身体微微发热，在冬天时，更要重视慢跑这项热身活动，冬天慢跑时，要循序渐进，不能加速过猛，需要让身体和呼吸慢慢适应冬天较低的气温，等身体微微发热并且稍稍出汗时即可。</string>
    <string name="mucleStre_string">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;为了防止肌肉在高强度运动中拉伤或撕裂，我们需要进行拉伸运动来降低肌肉拉伤的风险。</string>
    <string name="neckStre_string">正常站立，肩部不动，头部前后左右扭动，使劲部感到有拉伸感做十到二十次即可。</string>
    <string name="shoulderStre_string">一只手与肩平行横向伸直，另一只手从伸直手下方穿过在伸直手外侧按压伸直手肘部，使伸直手向胸部方向靠拢，肩部有拉伸感，持续30秒即可。</string>
    <string name="legStre_string">可进行弓步压腿拉伸或侧弓步压腿拉伸，弓步压腿拉伸：左腿（或右腿）向前跨一步，右腿（或左腿）原地不动，跨步的腿膝盖弯曲，身体慢慢向下降低，双手可轻轻按压在跨步腿的大腿上，感到大腿内侧和大腿后侧肌肉有拉伸感即可，如无明显拉伸感，可使两脚前后距离加大一些，因人而异，保持三十秒即可，同样也要对腰部韧带进行拉伸，避免在运动中受伤。侧弓步压腿拉伸即腿向左右分开，原地不动的腿膝盖弯曲，身体慢慢向下降低，感到大腿内侧和大腿后侧肌肉有拉伸感即可。也可进行行抬腿提踵向前走和行进间向前踢腿，分别各自做二十次，两组即可。如感觉腿部仍然僵硬，可自行根据情况再重复上述动作。</string>
    <string name="legStreone">一只手与肩平行横向伸直，另一只手从伸直手下方穿过在伸直手外侧按压伸直手肘部，使伸直手向胸部方向靠拢，肩部有拉伸感，持续30秒即可。</string>
    <string name="legStretwo">可进行弓步压腿拉伸或侧弓步压腿拉伸，弓步压腿拉伸：左腿（或右腿）向前跨一步，右腿（或左腿）原地不动，跨步的腿膝盖弯曲，身体慢慢向下降低，双手可轻轻按压在跨步腿的大腿上，感到大腿内侧和大腿后侧肌肉有拉伸感即可.</string>
    <string name="legStrethree">如无明显拉伸感，可使两脚前后距离加大一些，因人而异，保持三十秒即可，同样也要对腰部韧带进行拉伸，避免在运动中受伤。侧弓步压腿拉伸即腿向左右分开，原地不动的腿膝盖弯曲，身体慢慢向下降低，感到大腿内侧和大腿后侧肌肉有拉伸感即可。</string>
    <string name="legStrefour">也可进行行抬腿提踵向前走和行进间向前踢腿，分别各自做二十次，两组即可。如感觉腿部仍然僵硬，可自行根据情况再重复上述动作。</string>
    <string name="joinAc_string">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在篮球运动中，我们的膝关节、脚踝关节会有扭伤或者崴到的状况，所以我们要对这些关节预热，降低受伤的风险。</string>
    <string name="waistAround_string">正常站立，两脚分开并与肩膀同宽，双腿伸直，双手叉腰，腰部前后左右的做环绕移动，活动腰部和髋关节。</string>
    <string name="kneeAround_string">正常站立，屈膝，膝盖之间靠拢，双手放在膝盖上面，先向左边做环绕，然后再向右边做环绕，各自二十次即可。</string>
    <string name="ankleAround_string">正常站立,两脚分开与肩同宽，一只脚向前方靠身体外侧稍微伸出，脚尖点地，脚踝左右绕圈运动，脚尖不动，同时两只手在脖子前方互握交叉，左右绕圈活动手腕。然后换成另一只脚重复上述动作。</string>
    <string name="shuttleRun_string">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;折返跑可使身体更快进入运动状态，并且适应运动场地环境，根据场地环境和自身身体情况需求，自行安排，一般来50米来回三趟即可。</string>
    <string name="warmUpWithBalls_string">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;无论是控卫还是分卫，小前锋还是大前锋，或者是中锋，打球或比赛时球感的好坏能直接或间接的影响场上发挥，所以我们需持球热身，找到手感和球感，才能发挥的更好。</string>
    <string name="warmUpBallone_string">（1）可原地单手运球，也可双手交叉运球，也可体前变向交叉运球，初学者可以在原地运，较熟悉者可以行进间运，尽快找到手感和对球的感觉。</string>
    <string name="warmUpBallTwo_string">（2）可找一队友一起，互相传球热身，或者运球互相传球上篮。</string>
    <string name="warmUpBallthree_string">（3）在自己比较有把握的几个位置投篮热身，可找一队友给你传球，投完马上接球投下一个，找到手感，然后在命中率较低的几个位置也是如此，熟悉手感。</string>
    <string name="fullyWarmUp_string">在充分热身的情况下再去打球，能减少和降低身体受伤的风险，也能使身体更快适应运动强度，使身体机能得到更好的发挥，从而展现更高水平的技术和更良好的竞技状态。</string>
    <string name="snakerSelection_string">在经济条件允许的范围之内，选择一些对自己舒适的装备，如紧身衣、紧身裤、球裤等，选择一双对脚部有缓冲作用且舒适的篮球鞋，能有效缓解脚踝和膝盖的压力，如有脚踝、膝盖、手腕受过伤的，可相应选择护踝、护膝、护腕来防止再次受到损伤。</string>
    <string name="mattersNeeding_string">上场打球时，正常适度的身体对抗可以提高篮球的趣味，但过猛或过大幅度的动作则会伤到场上的球员，有可能还会误伤队友，甚至可能引起矛盾，大打出手，所以应控制好自己动作的力量和幅度。野球场犯规最多的就是打手和走步，对于一些不懂装懂、体毛犯规的人笑笑就好，毕竟中国人口大，傻逼多，对于一些故意大幅度动作，甚至演变为故意放拐、故意撞人的人，退一步，海阔天空，毕竟身体健康是最重要的，如果还对方还得寸进尺，不要怂，就是干，相信大多数打球的人眼睛还是雪亮的，并且你的队友也会支持你，成为你坚实的后盾。</string>
    <string name="mattersAfterSport_string">在运动之后，要进行简单的拉伸，防止肌肉过度紧张，舒缓肌肉，并且不要立刻坐在椅子上或地上休息，要进行简单的走动，慢慢使身体回到平常状态，补充水份时需一小口一小口喝，不能一大口水喝下去，并且不能喝冰水，需喝稍热一点的水。打完球后需注意保暖，不可立即洗澡，以免感冒，特别是在冬天。</string>
    <string name="postInJury_string">尽管我们在打球之前进行了充分的热身，选择了适合的装备，也避免一言不合就动手，但这只是降低了我们运动时受伤的风险，并不能完完全全阻止受伤的发生，所以在受伤时，如何及时正确有效的处理，并将受伤后对身体的影响降到最低，是我们需要认真了解的。</string>
    <string name="muscleStrain_string">肌肉拉伤后，立刻停止运动，以防肌肉拉伤加重，需立即进行冷敷处理，用冰块或冰水浸过的毛巾敷于拉伤处，缓解肌肉疼痛感和肌肉肿胀，之后可根据实际情况对受伤处进行包扎并抬高受伤处肢体，如严重者，做完如上处理后需立刻去医院就诊处理。</string>
    <string name="jointStrain_string">关节扭伤后，立刻停止运动，并到一平坦处，放松关节，防止受伤关节再次用力，之后进行冷敷处理，用冰块或冰水浸过的毛巾敷于关节扭伤处，之后可根据实际情况对受伤处进行包扎固定并抬高受伤处肢体，如严重者，做完如上处理后需立刻去医院就诊处理。</string>
    <string name="abrasion_string">皮肤擦伤后，立刻停止运动，并到一平坦灰尘较小处，首先用清水或生理盐水和棉签或棉布清洗伤口处的污垢，然后用碘伏或百分之七十五的酒精，如怕化脓，可之后涂抹红药水和紫药水，然后用无菌纱布或创可贴包扎，如严重者，做完如上处理后需立刻去医院就诊处理。</string>
    <string name="muscleStrainAf_string">避免再次运动，在休息期间可用热水敷于拉伤处（四十八小时后），并可适当用红花油类等药物按摩拉伤处，辅以止痛贴等膏药配合治疗（如就医以医生治疗方法为准），等完全恢复之后再适当慢慢开始运动。</string>
    <string name="jointStrainAf_string">避免再次运动，在休息期间可用热水敷于拉伤处（四十八小时后），并可适当用云南白药类等药物按摩关节扭伤处，也可配合针灸等治疗方法共同康复，等完全恢复之后再适当慢慢开始运动。</string>
    <string name="abrasionAf_string">避免再次运动，包扎后十二小时或二十四小时换药包扎，让伤口处保持通风透气的环境，避免感染，等完全恢复之后再适当慢慢开始运动。</string>
    <string name="dribbleone_string">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;运球是篮球运动中最基础也是最根本的技术动作，是篮球比赛中重要的进攻技术。它不仅是个人攻击的有力手段，并且能用运球带动全队的团队进攻配合，在一场篮球比赛中，如果没有良好的运球技术，很有可能在比赛中连续引起失误，从而输掉比赛。\n\n 运球指的是控球者在原地或移动中，用单手连续拍击或双手交替拍击由地面反弹的球，一般在篮球运动中，带球移动时需连续拍球，不可移动三步或四步时才拍击球一下，一般每移动一步或两步时都需伴随着拍击球的动作。</string>
    <string name="dribbletwo_string">一般在运球时，两脚前后自然开立，两膝微屈，成跨步姿势，上体稍前倾，头抬起，眼睛目视前方。非运球手臂稍屈肘抬于球的斜上方，用以护球。脚步动作的幅度和下肢各关节的弯曲角度随运球速度和高度的不同而适当调整变化。</string>
    <string name="dribblethree_string">运球时，五指张开，用手指以及手指指根以上部位及手掌外边缘触球，掌心不触球。</string>
    <string name="highdri">高位运球时，主要以肘部关节为轴，用手腕、手肘、肩部的力量运球，在做一些特殊的运球动作时，可根据实际情况改变，以自身体会为准。</string>
    <string name="lowdri">低位运球时主要以手腕关节为轴，用手腕、手指的力量运球.</string>
    <string name="maxdri">原地运球时，拍击球的部位可在球的正上方部位，向前移动运球时，拍击球的部位可在球的后上方部位处。</string>
    <string name="dribblefour_string">运球时，应保证球在自己可控制的身体范围内，当对手切球或抢球时，能立刻控制球并防止对方得到球，在必要时刻，可用利用身体、手臂等部位在规则允许的范围内护住球。\n\n总之，运球是一门球与人结合的艺术，要想在篮球运动中使技术不断提高，运球的练习是必不可少的。</string>
    <string name="passTheBall_string">传球是篮球运动中必不可少的技术动作，一个好的传球能给团队带来优势，助攻队友，锁定胜局。传球大致包括双手胸前传球，单手肩上传球，单手侧传球，行进间传球等传球的技术，在传球时，手指主要用力，在传球时，手指张开，且手指手腕用力，使球迅速及时的传出，到己方队友的位置，并使己方队员能轻松快速的接住，传出时，可使球在空中稍微带一点旋转，能使球在空气中运动的更迅速。</string>
    <string name="shotone_string">投篮是篮球运动中进攻的重要技术，拥有了稳定的投篮技术，就可以说是拥有了稳定的得分手段，进攻时团队的战术配合、走位、掩护，都是为了创造机会，使队员投篮或上篮得分。\n\n投篮时整个身体的姿势，动作要协调，并且手臂、手肘、手腕、手指都要协调发力，使投篮动作协调舒展，世界上没有完美的投篮姿势与方法，只有最适合自己发力动作与习惯的投篮姿势与方法。\n\n下面介绍一种投篮方法，不是唯一，以自身感受到舒展协调为准，如无感觉，可换成其他不同的投篮方式进行不同尝试。</string>
    <string name="shottwo_string">以有右手为投篮手为例：\n\n右手手掌张开，用投篮手的手指和掌沿触球，手掌心不触球， 右手的食指与中指要放在球的中间，手掌与手腕可向右偏一些。</string>
    <string name="shottwo">左手手掌除大拇指其余四指可略微展开，扶住球的左边，左手大拇指与右手大拇指成可成60°至90°姿势。\</string>
    <string name="shotthree_string">投篮时，右手手肘弯曲，手肘与肩可大于90°角，不必追求成90°角，手掌与手腕可成90°角。</string>
    <string name="shotfour">两脚脚尖可略微前后分开，并稍稍向左斜，两膝弯曲，身体整体发力，将球投出。</string>
    <string name="shotfinal">投篮时，眼睛瞄向篮筐后沿部分，投篮出手时要流畅、柔和，不要为追求出手速度猛然用力，这样会导致命中率下降，出手后，手腕、食指与中指用力，使篮球带上适当后旋，右手中指与食指可稍微停顿指向篮筐方向，使篮球的轨迹保持完整，投篮时，如篮球总是砸在篮筐边缘，可适当提高出手点，使篮球轨迹弧度加大，增加命中率。</string>
    <string name="layup_string">三步上篮是在篮球规则允许的范围内做出的合法的篮球技术动作,是最基本的投篮技术，也是最基础的等分手段之一。虽然称作三步上篮，但其实当持球者准备持球上篮时双脚只可向前跨两步，之后须将球传出或上进篮筐，否则就算违规。\n上篮时按照手与肩的相对高度，又可分成低手上篮和高手上篮，在不同的进攻场景中需要灵活运用。</string>
    <string name="layupone_string">运球后跳起（双脚离地）接球单脚落地，此时先落地的那一只脚为中枢脚\n或：双脚跳起（离地）接住传球单脚落地，此时先落地的脚为中枢脚\n这两种情况，一种是运球后的三步上篮，另一种是接住传球后三步上篮</string>
    <string name="layuptwo_string">非中枢脚向前跨步落地，此时落地的这只脚变为中枢脚</string>
    <string name="layupthree_string">另一只脚变为非中枢脚，此时非中枢脚向前跨步，在落地之前需将球出手</string>
    <string name="skDri_string">熟练运球是每个篮球队员必须掌握的基本功，特别是控球后卫，要想做出逼真并且熟练的过人动作，运球的练习是必不可少的。</string>
    <string name="skDrione_string">原地运球练习：两腿分开，膝盖略弯，背部挺直，腰部略收，双眼目视前方，双手或单手原地大力拍球，力量要足，速度要快，且必不可太快死球，要能控制球，直到手臂手掌感到无力，可休息一会，然后继续练习。熟练过后，可以练习交叉运球，一只手拍了五到十下之后立即换另一只手，直到双手无力休息。</string>
    <string name="skDritwo_string">原地指尖运球练习：与原地运球练习的要求一样，只不过只用指尖最上面一部分运球，感受指尖对球的控制。</string>
    <string name="skDrithree_string">此外还有胯下运球、身后运球等等练习运球的方式，初学者可根据自己的水平自行练习。\n\n行进间运球：在行进间练习运球，可单手运球，也可双手都拍球，单手运球时，可行进四五步时换到另一只手，也可进行体前变向或胯下运球等动作，可根据情况自行选择。此外还可让队友扮演防守队员进行全场对抗运球练习提高运球水平。</string>
    <string name="skBackyardBasketball_string">投篮时，身体的整体的发力和手臂手指的发力至关重要，因此在平时，我们需要进行身体的力量训练和手指手臂的力量训练。在选择了一个投篮姿势后，需要不断的练习，近距离投篮，中距离投篮，远距离投篮这些都需大量练习，使身体产生肌肉记忆，才能在比赛时更迅速、更稳定的出手，在练习一段时间后，可进行有干扰投篮训练或者对抗后投篮训练，比赛中少不了身体对抗，而在对抗后还能保持命中率是对球队得分的最大保障，在投篮时，要保持自信和良好的心态，才能保持良好的投篮状态。总之一句话，多练习多思考。</string>
    <string name="skCooperation_string">首先要明白自己在场上的位置、能力，能够做些什么，能够为队友做些什么，在场上时，要多为队友掩护和挡拆，多空切和跑位，得球后不要自己一个人单打独斗，看见空位时要及时传球，队友有更好的进攻机会时也要及时传球，如有基础的话，可和队友跑一些简单的战术，多总结，多思考。输球不要紧，赢球也无所谓，最重要的是和队友、朋友打篮球时的快乐与开心。</string>
    <string name="fbWarmUp_string">足球，作为一项具有高对抗性，高强度的运动。因此我们在运动前的热身准备是十分必要的。正确的热身运动，可以减少神经紧张和肌肉拉伤、酸痛。有效的热身运动，能够降低90%的运动损伤。但对于不同年龄段的人群，不同的天气，我们所需要进行的热身运动时间都是不同的。对于足球运动，我们又应该如何正确的去进行运动前的热身准备呢？</string>
    <string name="fbNormalWarm_string">不管什么运动，热身都要先活动开身体的各个关节，拉伸好即将运动肌肉和韧带。对于足球运动来说，要着重去活动开下肢关节及拉伸下肢肌肉。首先要把身体热起来，使机体功能达到运动的强度水准。</string>
    <string name="fbJogging">慢跑。围着场地慢跑几圈，让整个身体先热起来，有点稍稍出汗的感觉。</string>
    <string name="fbNormalMuscleStrain">拉伸身体肌肉。对身体各个部位的肌肉和关节进行拉伸，使肌肉、关节、韧带都得到充分的舒展。</string>
    <string name="fbVariableSpeedRunning">变速跑。做完前两项运动之后，可以在大禁区两端进行折返跑和变速跑，冲刺一下，使身体进入状态。</string>
    <string name="fbSpecialWarm_string">专项热身运动指的是结合自己常踢的位置，在运动前做一些针对性的热身运动。</string>
    <string name="fbSpecailWarmForward">前锋要进行射门练习，变速折返跑，过人，提前找到“脚感”。</string>
    <string name="fbSpecailWarmMidfielder">中场之间练习一下撞墙，长传，逼抢。</string>
    <string name="fbSpecialWarmBackfielder">后卫练习一下长传球，头球，注重头球的练习，运动前没有提前活动开头部，是很容易造成受伤的.</string>
    <string name="fbSpecialWarmGoalKeeper">守门员要练习一下扑地球，接高球及大脚出球。</string>
    <string name="fbPreOfInjury">要在足球运动中避免受伤，首先就要在运动前进行合理的热身运动，“激活”身体的自我保护功能</string>
    <string name="fbSnakerSel">在踢球时，我们要选择合适的足球鞋，在不同的草地运动时要合理的选择球鞋。\n\n有关球鞋的选择\n\n根据场地的不同，足球鞋根据鞋钉特点分为六大类：SG、FG、HG、AG、TF、IC</string>
    <string name="fbSnakerSG">SG(钢钉足球鞋)：Soft Groud(松软的场地)，也就是通常所说的钢钉足球鞋，鞋钉比较长，适用于表面松软或者非常松软的真草，一般球员会在雨天使用此鞋钉的足球鞋。</string>
    <string name="fbSnakerFG">FG(长钉足球鞋)：Firm Ground(偏硬的场地)，FG球鞋是天然草场上最好的选择。设计师们针对天然草场对FG球鞋作出了专门的改良，这使得大多数球员都在这种场地上选择了FG。目前大多数职业球员在比赛时穿的就是FG鞋钉，也是最为常见的。通常FG鞋钉长度是最长的，适合平整的天然草场地，只要场地不是特别湿漉。</string>
    <string name="fbSnakerHG">HG(短钉足球鞋)：Hard Ground(坚硬的场地)，鞋钉为比FG稍短胶钉，适用于顶级人草或中等人草，橡胶加细沙的厚度能垂直埋掉2/3一元硬币，业余比赛场地条件中上的场地。</string>
    <string name="fbSnakerAG">AG(人草专用钉足球鞋)：Artificial Ground(人草专用钉)，鞋钉比HG的短，一般为1厘米左右，且采用的橡胶比FG、HG都要柔软，鞋钉数量也要比上述两类多，适用于橡胶粒加细沙厚度 大于1厘米的人造草坪。</string>
    <string name="fbSnakerTF">TF(碎钉足球鞋)：Turf(人工塑料场地)，也就是俗称的碎钉足球鞋。适用于各类人造球场，适应性强，确定是抓地力比如上述几种鞋钉，启动偏慢，但对脚踝、膝关键造成的压力最小。</string>
    <string name="fbSnakerIC">IC：Indoor(室内足球场)，适用于经过打磨处理的室内足球场和质量非常差的室外人草。</string>
    <string name="fbequipmentSel">除了足球鞋之外，必要的防护装备也是十分重要的，例如护腿板，护膝，护踝。护腿板能够有效的缓冲，分散小腿受到的压力，保护小腿的胫骨和腓骨。护踝将脚踝和小腿胫骨固定在一起，避免崴脚。\n\n在进行剧烈运动后，适当的进行恢复运动，切忌运动后立刻坐下喝冰水，恰当的缓冲运动能够有效的保护身体。</string>
    <string name="fbchuli_string">倘若受伤无法避免，那么我们要如何去处理呢？\n\n面对一些常见的受伤情况，我们要学会及时去处理它，以防久而久之对身体留下难以治愈的后遗症。</string>
    <string name="fbCramp_string">抽筋，指的是因肌肉内电解质不平衡导致的肌肉痉挛。多发生在小腿肌肉，当我们在肌肉疲劳，跑动过多，天气寒冷时的肌肉快速收缩，都有可能导致抽筋。然而只要我们学会了正确的处理方法，抽筋其实是很好解决的。当发生抽筋时，令球员平躺在地上，伸直抽筋的腿并将其抬起，用力压前脚掌，静止几分钟后即可。</string>
    <string name="fbMuscleStrain">肌肉拉伤是指肌肉在运动中剧烈收缩或过度牵拉导致的肌肉局部损伤。在许多高强度的运动中，它都是一种十分常见的运动损伤。肌肉拉伤有轻重之分，重度拉伤要立即送往医院救治，轻度拉伤时，对肌肉进行冷处理，即用冰水冲洗局部肌肉或用毛巾包裹冰块冷敷，然后用绷带包裹肌肉损伤部位，防止肿胀过度。</string>
    <string name="fbJointStrain">扭伤是指由于身体突然变向，关节快速运动导致的韧带断裂或损伤所引起的疼痛。多发生在脚腕踝关节外侧韧带和膝关节外侧韧带。发生扭伤之后，我们要在48小时内用冰袋冷敷，之后再冷热交替敷腿，当疼痛减缓之后做一下缓冲运动。另外，值得注意的是，很多人会在扭伤之后立即用药酒或红花油涂抹伤处，然而这是错误的做法。因为这样会导致局部血管扩张，血流加快，充血更加严重，大力揉搓伤处更是有可能导致更多的血管破裂，加剧疼痛和肿胀。</string>
    <string name="fbRICE">以上三种就是足球运动中最为常见的运动损伤，而我们面对更多的受伤情况，其实可以采用运动伤害第一现场处理原则——RICE原则（节选自国家体育总局官网）。</string>
    <string name="fbR">R：是英文REST的缩写，意思是受伤后应立即停止运动，制动休息，防止重复损伤和加重损伤。</string>
    <string name="fbI">I：是英文ICE的缩写，意思是要马上冰敷。冰敷在运动损伤的初期非常关键。\n\n冰敷的效应在于使血管收缩，减慢局部血液循环；减少细胞的新陈代谢率(减少细胞组织的受伤及坏死)；降低患处疼痛感觉；减轻肌肉痉挛；减低血管壁的渗透性，阻慢肿胀加剧及软组织出血。生理上，当肌肉温度降低到20度左右时，肌肉张力会减弱，低到10度时，痛觉神经的传导也会变慢或暂时阻断，产生有效的止痛效果。因此，当急性运动伤害发生的时候，此时肌肉或是韧带刚刚受到剧烈的冲击，可能有挫伤、撕裂甚至断裂，同时伴随着毛细血管出血、组织液渗出、局部肿胀，这时就需要冰敷来减少毛细血管出血、组织液渗出控制炎症。最简单直接的方法是：用塑料袋装冰块并加少许水直接置于患处，一次冰敷时间约15～20分钟，通常冰到患部有麻木感就可以停止，休息约1～2小时再冰敷一次。值得注意的是儿童、少年在冰敷时，应以毛巾包覆冰袋后置于患部，5分钟左右观察一下，时间控制在15-20分钟左右，以避免冻伤。\n\n冰敷的阶段长短，要看伤势的严重性而定，并非人们常说的「前三天冰敷、三天后热敷」，若是患部仍持续肿胀，冰敷就要继续进行。</string>
    <string name="fbC">C：是英文COMPRESSION的英文缩写，意思是加压包扎。冰敷过后患处要及时加压包扎，控制伤部运动，避免重复受伤动作，减少出血和渗出。在国内，我们有时还要外敷新伤药之类的止血止痛的中药来控制肿胀。</string>
</resources>